--- a/src/html/index-page/index-task-section.pug
+++ b/src/html/index-page/index-task-section.pug
@@ -21,24 +21,24 @@ section.index-task-section
             .case-block__card
                 .case-block-card__action
                     .action__title Сделали
-                    .action__discr Внедрив систему входного контроля сырья, его маркировку, а при не соответствии входных параметров помещение его в изолятор брака.
+                    .action__discr Внедрили систему входного контроля сырья, маркировку его по результатам контроля, а при не соответствии входных параметров помещение сырья в изолятор брака.
                 img(src="../../img/index-page/case-card-icon.svg", alt="стрелка в круглешке направлением направо").case-block-card__icon
                 .case-block-card__result
                     .result__title Результат
-                    .result__discr Исключили использование сырья и комплектующих несоответсвующих заданным параметрам, получив стабильное качество готовой продукции.
+                    .result__discr Исключили использование сырья и комплектующих несоответсвующих заданным параметрам, получили стабильное качество выпускаемой продукции.
             .case-block__card
                 .case-block-card__action
                     .action__title Сделали
-                    .action__discr Установили на комплектующие и сырье параметры неснижаемого запаса, применив инструмент бережливого производства - вытягивание со склада.
+                    .action__discr УВнедрили систему неснижаемого запаса сырья и материалов, применив инструмент бережливого производства - вытягивание со склада.
                 img(src="../../img/index-page/case-card-icon.svg", alt="стрелка в круглешке направлением направо").case-block-card__icon
                 .case-block-card__result
                     .result__title Результат
-                    .result__discr Обеспечили соблюдение сроков выпускаемой продукции за счет своевременного наличия на сладах необходимого сырья и материалов.
+                    .result__discr Обеспечили соблюдение сроков выпускаемой продукции, за счет своевременного наличия на сладах необходимого сырья, материалов и комплектующих.
             .case-block__card
                 .case-block-card__action
                     .action__title Сделали
-                    .action__discr Использовали систему горизонтальной ротации кадров, персонал осваивал смежные профессии, работая на разных производственных участках.
+                    .action__discr Внедрили систему горизонтальной ротации кадров, персонал осваивал смежные профессии, работая на разных производственных участках.
                 img(src="../../img/index-page/case-card-icon.svg", alt="стрелка в круглешке направлением направо").case-block-card__icon
                 .case-block-card__result
                     .result__title Результат
-                    .result__discr Обеспечили соблюдение сроков выпускаемой продукции за счет исключения случаев простоя производственных участков по причине отсутствия персонала.
+                    .result__discr Обеспечили ретмичность циклов производства, за счет исключения случаев простоя производственных участков из-за отсутствия персонала.
