--- a/src/index.pug
+++ b/src/index.pug
@@ -24,7 +24,7 @@ block content
         //- include html/index-page/index-regulation-section.pug 
         //--include html/index-page/index-adaptation-section.pug
         include html/index-page/index-task-section.pug
-        //- include html/supply-page/supply-request-section.pug
-    //- include html/footer.pug 
+        include html/supply-page/supply-request-section.pug
+    include html/footer.pug 
     //--script(src="js/app.js")
     //--script(src="js/modules/burger-action.js")
