--- a/Compiled/css/style.css
+++ b/Compiled/css/style.css
@@ -1280,7 +1280,6 @@ select {
 
   .index-task-block {
     justify-content: flex-start;
-    padding-left: 100px;
   }
 
   .index-task-card {
@@ -1293,6 +1292,37 @@ select {
 
   .index-task-card:nth-child(odd) {
     margin-right: 0px;
+  }
+
+  .case-block {
+    justify-content: flex-end;
+  }
+
+  .case-block__card {
+    width: 600px;
+  }
+
+  .case-block-card__action,
+.case-block-card__result {
+    width: 100%;
+  }
+
+  .case-block__card {
+    flex-direction: column;
+  }
+
+  .result__title {
+    padding-top: 20px;
+  }
+
+  .case-block-card__icon {
+    width: 50px;
+    height: 50px;
+    transform: rotate(90deg);
+  }
+
+  .action__discr {
+    margin-bottom: 20px;
   }
 }
 @media only screen and (max-width: 768px) {
