--- a/src/html/index-page/index-task-section.pug
+++ b/src/html/index-page/index-task-section.pug
@@ -16,7 +16,7 @@ section.index-task-section
             .index-task-card  
                 img(src="../../img/index-page/task-icon_4.svg", alt="Силуэты нескольких людей плечем к плечу").index-task-card__icon 
                 .index-task-card__content Притягиваем сотрудников с высокими компетенциями
-        h2.content__title.content__title_adaptation-section Как это работает
+        h2.content__title.content__title_adaptation-section Примеры кейсов
         .case-block
             .case-block__card
                 .case-block-card__action
@@ -29,7 +29,7 @@ section.index-task-section
             .case-block__card
                 .case-block-card__action
                     .action__title Сделали
-                    .action__discr УВнедрили систему неснижаемого запаса сырья и материалов, применив инструмент бережливого производства - вытягивание со склада.
+                    .action__discr Внедрили систему неснижаемого запаса сырья и материалов, применив инструмент бережливого производства - вытягивание со склада.
                 img(src="../../img/index-page/case-card-icon.svg", alt="стрелка в круглешке направлением направо").case-block-card__icon
                 .case-block-card__result
                     .result__title Результат
