--- a/src/html/labor-page/labor-suot-section.pug
+++ b/src/html/labor-page/labor-suot-section.pug
@@ -14,7 +14,7 @@ section.labor-suot-section
                     .left-part-sc__button от 60 000 р.
             .suot-card  
                 .suot-card__left-part
-                    .left-part-sc__title Отдельные документы
+                    .left-part-sc__title Индивидуальные
                     .left-part-sc__list
                         .left-part-sc__item Положение по СУОТ и т.д.
                         .left-part-sc__item Инструкция по ОТ
@@ -24,13 +24,13 @@ section.labor-suot-section
                     .left-part-sc__button от 2 500 р. 
             .suot-card.suot-card__none
                 .suot-card__left-part
-                    .left-part-sc__title Отдельные документы
+                    .left-part-sc__title Аудит СУОТ
                     .left-part-sc__list
-                        .left-part-sc__item Положение по СУОТ и т.д.
-                        .left-part-sc__item Инструкция по ОТ
-                        .left-part-sc__item Конспект инструктажа
-                        .left-part-sc__item Мероприятия по ОТ
+                        .left-part-sc__item Аудит соответствия
+                        .left-part-sc__item Акт несоответствий 
+                        .left-part-sc__item Мероприятия по устранению
+                        .left-part-sc__item Наблюдение улучшений
                 .suot-card__bottom-part
-                    .left-part-sc__button от 2 500 р.
+                    .left-part-sc__button от 80 000 р.
 
 
