--- a/Compiled/css/style.css
+++ b/Compiled/css/style.css
@@ -246,7 +246,7 @@ button {
 }
 
 .nav-header-list__item{
-  background-image: url(img/index-page/tb-list-item__check-img_480.png); }
+  background-image: url(../img/index-page/tb-list-item__check-img_480.png); }
 
 .nav-header-list__item {
   font-size: 22px;
@@ -276,7 +276,7 @@ button {
 }
 
 .room-butom{
-  background-image: url(img/buton-room-icon.png); }
+  background-image: url(../img/buton-room-icon.png); }
 
 .room-butom {
   display: -webkit-box;
@@ -391,7 +391,7 @@ button {
 }
 
 .index-main-section{
-  background-image: url(img/index-page/bg-index-main.jpg); }
+  background-image: url(../img/index-page/bg-index-main.jpg); }
 
 .index-main-section {
   display: -webkit-box;
@@ -471,7 +471,7 @@ button {
 }
 
 .list__item{
-  background-image: url(img/index-page/tb-list-item__check-img_1024.png); 
+  background-image: url(../img/index-page/tb-list-item__check-img_1024.png); 
 }
 
 .list__item {
@@ -531,15 +531,15 @@ button {
 }
 
 .discription-card__img1{
-  background-image: url(img/step-section/card-content__img1.jpg); 
+  background-image: url(../img/step-section/card-content__img1.jpg); 
 }
 
 .discription-card__img2{
-  background-image: url(img/step-section/card-content__img2.jpg); 
+  background-image: url(../img/step-section/card-content__img2.jpg); 
 }
 
 .discription-card__img3{
-  background-image: url(img/step-section/card-content__img3.jpg); 
+  background-image: url(../img/step-section/card-content__img3.jpg); 
 }
 
 .discription-card__title {
@@ -802,7 +802,7 @@ select {
 
 .content-list__item_regulation {
   padding-left: 44px !important;
-  background-image: url(img/index-page/check-circle.svg);
+  background-image: url(../img/index-page/check-circle.svg);
 }
 
 .border-block_regulation-section {
@@ -986,15 +986,15 @@ select {
 }
 
 .content-list__item1 {
-  background-image: url(img/index-page/adap-bc-item__img.svg);
+  background-image: url(../img/index-page/adap-bc-item__img.svg);
 }
 
 .content-list__item2 {
-  background-image: url(img/index-page/adap-bc-item__img2.svg);
+  background-image: url(../img/index-page/adap-bc-item__img2.svg);
 }
 
 .content-list__item3 {
-  background-image: url(img/index-page/adap-bc-item__img3.svg);
+  background-image: url(../img/index-page/adap-bc-item__img3.svg);
 }
 
 .red-line__text_adaptation-section {
@@ -1159,7 +1159,7 @@ select {
   width: 65px;
   height: 50px;
   background-color: #FFFFFF;
-  background-image: url(img/supply-page/icons_ked_bell.svg);
+  background-image: url(../img/supply-page/icons_ked_bell.svg);
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -1249,7 +1249,7 @@ select {
 }
 
 .no-webp .supply-main-section__main-img{
-  background-image: url(img/supply-page/main-img-section_1440.jpg); }
+  background-image: url(../img/supply-page/main-img-section_1440.jpg); }
 
 .supply-main-section__main-img {
   width: 100%;
@@ -1337,7 +1337,7 @@ select {
 
 .outsourcing-discr__item {
   padding-left: 40px;
-  background-image: url(img/supply-page/check-circle.svg);
+  background-image: url(../img/supply-page/check-circle.svg);
   background-repeat: no-repeat;
   background-position: left center;
 }
@@ -1351,7 +1351,7 @@ select {
 }
 
 .no-webp .img-block{
-  background-image: url(img/supply-page/supply-block-img_1280.jpg); }
+  background-image: url(../img/supply-page/supply-block-img_1280.jpg); }
 
 .img-block {
   position: relative;
@@ -1372,7 +1372,7 @@ select {
 }
 
 .no-webp .min-img-block{
-  background-image: url(img/supply-page/supply-block-img_min1280.jpg); }
+  background-image: url(../img/supply-page/supply-block-img_min1280.jpg); }
 
 .min-img-block {
   position: absolute;
@@ -1564,7 +1564,7 @@ select {
   font-size: 28px;
   line-height: 35px;
   border: 1px solid #8E0532;
-  background-image: url(img/supply-page/chevron-down.svg);
+  background-image: url(../img/supply-page/chevron-down.svg);
   background-repeat: no-repeat;
   background-position: right 20px bottom 10px;
   cursor: pointer;
@@ -1850,7 +1850,7 @@ body {
   font-size: 16px;
   font-family: "Mulish", sans-serif;
   font-weight: 300;
-  background-image: url(img/labor-page/suot-card-icon.svg);
+  background-image: url(../img/labor-page/suot-card-icon.svg);
   background-repeat: no-repeat;
   background-position: left;
 }
@@ -2127,7 +2127,7 @@ body {
   }
 
   .supply-main-section__main-img{
-    background-image: url(img/supply-page/main-img-section_1280.jpg); }
+    background-image: url(../img/supply-page/main-img-section_1280.jpg); }
 
   .background-block {
     width: 100%;
@@ -2283,7 +2283,7 @@ body {
   }
 
   .supply-main-section__main-img{
-    background-image: url(img/supply-page/main-img-section_1024.jpg); }
+    background-image: url(../img/supply-page/main-img-section_1024.jpg); }
 
   .supply-main-section__main-img {
     height: 576px;
@@ -2656,7 +2656,7 @@ body {
   }
 
   .supply-main-section__main-img{
-    background-image: url(img/supply-page/main-img-section_768.jpg); 
+    background-image: url(../img/supply-page/main-img-section_768.jpg); 
   }
 
   .supply-main-section__main-img {
@@ -2986,7 +2986,7 @@ body {
   }
 
   .supply-main-section__main-img{
-    background-image: url(img/supply-page/main-img-section_480.jpg); 
+    background-image: url(../img/supply-page/main-img-section_480.jpg); 
   }
 
   .supply-main-section__main-img {
@@ -3094,7 +3094,7 @@ body {
   }
 
   .supply-main-section__main-img{
-    background-image: url(img/supply-page/main-img-section_360.jpg); 
+    background-image: url(../img/supply-page/main-img-section_360.jpg); 
   }
 
   .supply-main-section__main-img {
@@ -3167,52 +3167,52 @@ body {
   }
 }
 
-.nav-header-list__item{ background-image: url(img/index-page/tb-list-item__check-img_480.webp); 
+.nav-header-list__item{ background-image: url(../img/index-page/tb-list-item__check-img_480.webp); 
 }
 
-.room-butom{ background-image: url(img/buton-room-icon.webp); 
+.room-butom{ background-image: url(../img/buton-room-icon.webp); 
 }
 
-.index-main-section{ background-image: url(img/index-page/bg-index-main.webp); 
+.index-main-section{ background-image: url(../img/index-page/bg-index-main.webp); 
 }
 
-.list__item{ background-image: url(img/index-page/tb-list-item__check-img_1024.webp); 
+.list__item{ background-image: url(../img/index-page/tb-list-item__check-img_1024.webp); 
 }
 
-.discription-card__img1{ background-image: url(img/step-section/card-content__img1.webp); 
+.discription-card__img1{ background-image: url(../img/step-section/card-content__img1.webp); 
 }
 
-.discription-card__img2{ background-image: url(img/step-section/card-content__img2.webp); 
+.discription-card__img2{ background-image: url(../img/step-section/card-content__img2.webp); 
 }
 
-.discription-card__img3{ background-image: url(img/step-section/card-content__img3.webp); 
+.discription-card__img3{ background-image: url(../img/step-section/card-content__img3.webp); 
 }
 
-.supply-main-section__main-img{ background-image: url(img/supply-page/main-img-section_1440.webp); 
+.supply-main-section__main-img{ background-image: url(../img/supply-page/main-img-section_1440.webp); 
 }
 
-.img-block{ background-image: url(img/supply-page/supply-block-img_1280.webp); 
+.img-block{ background-image: url(../img/supply-page/supply-block-img_1280.webp); 
 }
 
-.min-img-block{ background-image: url(img/supply-page/supply-block-img_min1280.webp); 
+.min-img-block{ background-image: url(../img/supply-page/supply-block-img_min1280.webp); 
 }
 
 @media only screen and (max-width: 1280px){
-  .supply-main-section__main-img{ background-image: url(img/supply-page/main-img-section_1280.webp); }
+  .supply-main-section__main-img{ background-image: url(../img/supply-page/main-img-section_1280.webp); }
 }
 
 @media only screen and (max-width: 1024px){
-  .supply-main-section__main-img{ background-image: url(img/supply-page/main-img-section_1024.webp); }
+  .supply-main-section__main-img{ background-image: url(../img/supply-page/main-img-section_1024.webp); }
 }
 
 @media only screen and (max-width: 768px){
-  .supply-main-section__main-img{ background-image: url(img/supply-page/main-img-section_768.webp); }
+  .supply-main-section__main-img{ background-image: url(../img/supply-page/main-img-section_768.webp); }
 }
 
 @media only screen and (max-width: 480px){
-  .supply-main-section__main-img{ background-image: url(img/supply-page/main-img-section_480.webp); }
+  .supply-main-section__main-img{ background-image: url(../img/supply-page/main-img-section_480.webp); }
 }
 
 @media only screen and (max-width: 360px){
-  .supply-main-section__main-img{ background-image: url(img/supply-page/main-img-section_360.webp); }
+  .supply-main-section__main-img{ background-image: url(../img/supply-page/main-img-section_360.webp); }
 }
