--- a/Compiled/css/style.css
+++ b/Compiled/css/style.css
@@ -523,7 +523,7 @@ button {
 }
 
 .discription-card__img {
-  width: 320;
+  width: 320px;
   height: 260px;
   background-repeat: no-repeat;
   background-position: center;
@@ -1689,7 +1689,7 @@ body {
 .lms-title-block__discription {
   width: 343px;
   font-size: 16px;
-  line-height: 2opx;
+  line-height: 20px;
   font-weight: 300;
   margin-bottom: 48px;
 }
